# serialcon

./: .gitignore  meson.build
include/serialcon/: commands.h  serialcon.h  statemachine.h
src/: meson.build  tags
src/commands/: commands.c  commands.h  meson.build  test.c
src/libvirt/: console.c  console.h  main.c  meson.build
src/serialcon/: command-line.h  getopt_long.c  getoptions.yaml  main.c  meson.build  serialcon.c
src/statemachine/: meson.build  statemachine.c  statemachine.h
